# cookiecutter-python-cmd2-ext-plug

./: .gitignore  Makefile  README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: install.sh
{{ cookiecutter.project_slug }}/{{ cookiecutter.base_app }}/: AUTHORS.rst  README.rst  noxfile.py  setup.cfg  setup.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.base_app }}/src/{{ cookiecutter.base_app }}/: __init__.py  _version.py  app.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.base_app }}/src/{{ cookiecutter.base_app }}/common/: __init__.py  base_plugin.py  command_set_settables.py  screen.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.base_app }}/src/{{ cookiecutter.base_app }}/resources/: config.ini
{{ cookiecutter.project_slug }}/{{ cookiecutter.base_app }}/tests/functional/: test_functional.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.plugin_name }}/: .bumpversion.cfg  AUTHORS.rst  CHANGELOG.rst  README.rst  setup.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.plugin_name }}/src/{{ cookiecutter.plugin_name }}/: __init__.py  fruits.py  settables.py  vegetables.py
