[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[metadata]
description-file = README.rst

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:src/{{ cookiecutter.base_app }}/_version.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'
